--- a/style.css
+++ b/style.css
@@ -108,10 +108,6 @@ body {
     font-size: 1.5rem;
 }
 
-.main__nav ul li:first-child {
-    margin-bottom: 100px;
-}
-
 .main__nav ul li a {
     text-decoration: none;
     color: white;
@@ -509,7 +505,7 @@ body {
         max-width: 200px;
         padding: 0;
     }
-    .main__nav ul li {
+    .main__nav ul li a{
         font-size: 0.8rem;
     }
 }
