--- a/style.css
+++ b/style.css
@@ -87,12 +87,11 @@ body {
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .main__nav img {
-    margin-top: 50px;
-    margin-bottom: -15rem;
+    margin-bottom: 1%;
     object-fit: contain;
 }
 
@@ -203,6 +202,7 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
+    padding-top: 5%;
 }
 
 .main__content--home-left-down button {
@@ -412,7 +412,7 @@ body {
 
 .main__content--about-me {
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
@@ -508,6 +508,9 @@ body {
     .main__nav ul li a{
         font-size: 0.8rem;
     }
+    .main__content--about-me {
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -528,7 +531,7 @@ body {
         z-index: 2;
         transition: .25s linear;
     }
-    .main__nav ul li {
+    .main__nav ul li a{
         font-size: 1.2rem;
     }
 
